--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^12.11.1",
     "brotli-webpack-plugin": "^1.1.0",
     "codelyzer": "^5.1.2",
+    "compression-webpack-plugin": "^4.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
